04-Terraform_variables_and_Datasources/terraform_manifests/modules/aws-ec2-instance/ec2securitygroups.tf
# Create Security Group - SSH Traffic
resource "aws_security_group" "ec2-ssh" {
  name        = "ec2-ssh"
  description = "Dev ec2 SSH"
  ingress {
    description = "Allow Port 22"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all ip and ports outbound"    
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ec2-ssh"
  }
}

# Create Security Group - Web Traffic
resource "aws_security_group" "ec2-web" {
  name        = "ec2-web"
  description = "Dev ec2 Web"
  ingress {
    description = "Allow Port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "Allow Port 443"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }  
  egress {
    description = "Allow all ip and ports outbound"    
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ec2-web"
  }
}
